# sapper

./: .env.example  .gitignore  Makefile  PROFILING.md  README.md  RELEASE.md  package-lock.json  package.json  update-manifest.json
scripts/: release.ps1  update-manifest-helper.ps1
src/: App.css  App.jsx  assetCheck.js  emojiData.js  themes.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_presence.rs  lib.rs  logger.rs  main.rs  message_storage.rs  models.rs  sapper_core.rs  search.rs  versioning.rs
src/components/: Changelog.css  Changelog.jsx  ConversationViewer.css  ConversationViewer.jsx  Dialog.css  Dialog.jsx  DropdownMenu.css  DropdownMenu.jsx  EditDialog.css  EditDialog.jsx  EmojiPicker.css  EmojiPicker.jsx  FormInput.css  FormInput.jsx  GifPicker.css  GifPicker.jsx  GiphyEmbed.jsx  Guide.css  Guide.jsx  Home.css  Home.jsx  ImportDialog.css  ImportDialog.jsx  ImportListItem.css  ImportListItem.jsx  InfoDialog.jsx  InfoSection.css  InfoSection.jsx  MemberEditor.css  MemberEditor.jsx  Message.jsx  MessageAttachments.jsx  MessageAvatar.jsx  MessageBar.jsx  MessageEmbeds.jsx  MessageReply.jsx  MessageStickers.jsx  MissingAssetsDialog.css  MissingAssetsDialog.jsx  Navbar.css  (+15 more)
src/components/guide/: BackupsData.jsx  EditingOrganising.jsx  FAQ.jsx  GettingStarted.jsx  PrivacyDataSafety.jsx  SettingsPage.jsx  Troubleshooting.jsx  UpdatingSapper.jsx  ViewingConversations.jsx
