[package]
name = "sapper"
version = "0.4.0"
description = "A fast, searchable interface for exported Discord Chats"
authors = ["hiwumo"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sapper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.22", features = ["v4"] }
confy = "2.0.0"
walkdir = "2.5.0"
directories = "6.0.0"
lru = "0.16"
tokio = "1.50"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2.6"
# TODO: replace with wincode
bincode = "2"
tantivy = "0.25"
tauri-plugin-clipboard-manager = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1.12"
discord-rich-presence = "1.1"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.10"

[profile.release]
strip = true
panic = "abort"
